Add utility flex class, color vars

--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+:root {
+    --dark-blue: #1f2937;
+    --light-blue: #3882f6;
+    --white: #f9faf8;
+    --light-gray: #e5e7eb;
+}
+
+.flex-display {
+    display: flex;
+}
+
+.flex-display-column {
+    display: flex;
+    flex-direction: column;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 100vh;
@@ -5,26 +21,27 @@ body {
 }
 
 button {
-    background-color: #3882f6;
+    background-color: var(--light-blue);
+    border: 1px solid var(--light-blue);
     border-radius: 7px;
-    color: white;
+    color: var(--white);
     font-size: 16px;
+    min-width: 130px;
     padding: 8px 35px;
-    border: 1px solid #3882f6;
+}
+
+.header, .hero, .info, .quote, .cta {
+    flex: 1;
 }
 
 .header, .hero, .footer {
-    background-color: #1f2937;
-    color: #f9faf8;
+    background-color: var(--dark-blue);
+    color: var(--white);
 }
 
-.header, .hero, .info, .quote, .cta, .footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
+/* HEADER */
 .header {
+    align-items: center;
     justify-content: space-between;
     padding: 25px 180px;
 }
@@ -34,7 +51,6 @@ button {
 }
 
 .header ul {
-    display: flex;
     gap: 15px;
     list-style-type: none;
     margin: 0;
@@ -42,13 +58,14 @@ button {
 }
 
 .header a {
-    color: #e5e7eb;
+    color: var(--light-gray);
+    font-size: 18px;
     text-decoration: none;
 }
 
+/* HERO */
 .hero {
-    color: #e5e7eb;
-    display: flex;
+    align-items: center;
     gap: 50px;
     padding: 60px 180px 120px;
 }
@@ -58,30 +75,30 @@ button {
 }
 
 .hero h1 {
-    color: #f9faf8;
     font-size: 48px;
     font-weight: 800; /* extra-bold*/
     margin-bottom: 0;
 }
 
 .hero .text {
+    color: var(--light-gray);
     font-size: 18px;
     margin-top: 0;
 }
 
+/* INFO */
 .info {
-    flex-direction: column;
+    align-items: center;
     margin: 20px 0 100px;
 }
 
 .info h2 {
-    color: #1f2937;
+    color: var(--dark-blue);
     font-size: 36px;
     font-weight: 800; /* extra-bold */
 }
 
 .info .logos-container {
-    display: flex;
     gap: 50px;
 }
 
@@ -90,20 +107,26 @@ button {
 }
 
 .info img {
-    border: 3px solid #3882f6;
+    border: 3px solid var(--light-blue);
     border-radius: 10px;
 }
 
 .info p {
-    color: #1f2937;
+    color: var(--dark-blue);
     text-align: center;
 }
 
+/* QUOTE */
 .quote {
-    background-color: #e5e7eb;
-    color: #1f2937;
-    flex-direction: column;
-    padding: 84px 245px 70px; /* alternatively i could add width to .quote .text and quote .quote-id., i think? */
+    align-items: center;
+    background-color: var(--light-gray);
+    color: var(--dark-blue);
+    justify-content: center;
+    padding: 84px 0 70px;
+}
+
+.full-quote-container {
+    max-width: 830px;
 }
 
 .quote .text {
@@ -111,31 +134,30 @@ button {
     font-style: italic;
     font-weight: 300;
     margin-bottom: 1rem;
-    max-width: 830px;
 }
 
 .quote .quote-id {
-    font-size: 24px;;
+    align-self: flex-end;
+    font-size: 24px;
     font-weight: 700;
-    margin-left: auto;
     margin-top: 0;
 }
 
+/* CTA */
 .cta {
-    color: #f9faf8;
+    color: var(--white);
     padding: 100px 180px;
 }
 
 .cta .cta-container {
-    background-color: #3882f6;
+    background-color: var(--light-blue);
     border-radius: 10px;
-    display: flex;
     padding: 50px 100px;
     width: 100%;
 }
 
 .cta .text {
-    color: #e5e7eb;
+    color: var(--light-gray);
 }
 
 .cta .right {
@@ -148,18 +170,19 @@ button {
 }
 
 .cta button {
-    border: 2px solid #f9faf8;
+    border: 2px solid var(--white);
 }
 
 .footer {
-    color: #e5e7eb;
+    color: var(--light-gray);
     height: 100px;
+    align-items: center;
+    justify-content: center;
 }
 
 /*
 Look into how the font works. Should i import roboto instead?
-Could use variable for the colors
-Make display: flex utility?
 I don't think i knw that body has a margin by default ie, user agent style sheet
-I didn't make body flex. Check if the footer is different if i delete sections, will the footer break?
  */
+
+ /* Note that body element is flex so that the footer sticks to bottom of the page even if i delete the other sections. */
